5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1716_2506.log
== TEST (2019-05-14 17:41:08) 
-- CODE:
ti=float(input("quantidade incial de tambaquis: "))
pc=float(input("percentuaç de crescimento: "))
qa=float(input("whatida por ano: "))

time=0

while(0<qa<12000):
	acres=ti*pc/100
	ti=t+acres
	ti=ti-qa
	time+=1
	
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
	
print(time)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ti=t+acres
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:41:27) 
-- CODE:
ti=float(input("quantidade incial de tambaquis: "))
pc=float(input("percentuaç de crescimento: "))
qa=float(input("whatida por ano: "))

time=0

while(0<qa<12000):
	acres=ti*pc/100
	ti=t+acres
	ti=ti-qa
	time+=1
	
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
	
print(time)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ti=t+acres
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:42:12) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<qa<12000):
	acres=ti*pc/100
	ti=t+acres
	ti=ti-qa
	time+=1
	
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
	
print(time)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ti=t+acres
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:42:41) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<qa<12000):
	acres=ti*pc/100
	ti=ti+acres
	ti=ti-qa
	time+=1
	
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
	
print(time)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ti=t+acres
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:43:08) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<qa<12000):
	acres=ti*pc/100
	ti=ti+acres
	ti=ti-qa
	time+=1
	
	if(qa<=0):
		print("EXTINCAO")
	else:
		print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:44:18) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<qa<12000):
	acres=ti*(pc/100)
	ti=ti+acres
	ti=ti-qa
	time+=1
	
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:44:45) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<qa<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
	
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:57) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<qa<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:47:50) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:16) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.48542
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:27) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.581322
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:29) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:45) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.301427
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:57) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:59) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:59) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.362832
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
q: p: w: LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:59) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:59) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:00) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:00) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:01) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:01) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:01) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:01) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.315453
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
q: p: w: LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
14
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
q: p: w: LIMITE
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:01) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.684908
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
q: p: w: LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
14
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.660771
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
q: p: w: LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
14
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.667081
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
11
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:04) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
1.03763
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
q: p: w: LIMITE
11
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
4
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:05) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
2.10811
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
11
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:05) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
2.18111
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
4
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
q: p: w: LIMITE
4
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:10) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
1.6913
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:10) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
2.22264
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:10) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:10) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
2.19031
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:10) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
2.40636
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:10) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
2.21754
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
11
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
4
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:10) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
2.51377
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
q: p: w: LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:12) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.836922
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
q: p: w: LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
q: p: w: LIMITE
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:12) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.594458
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
q: p: w: LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
q: p: w: LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
q: p: w: LIMITE
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:12) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.480399
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2506/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:20) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.494206
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
q: p: w: LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:45) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:48) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.418336
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:48) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:50) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
0.302646
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:50:26) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(time)
-- EXECUTION TIME:
0.341192
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:50:28) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(time)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:50:29) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1

if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(time)
-- EXECUTION TIME:
0.235912
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:50:36) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(time)
-- EXECUTION TIME:
0.240578
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:51:16) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
if(ti<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(time)
-- EXECUTION TIME:
0.341605
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:54:02) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<qa<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
	
if(qa<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
		
print(time)
	
	
-- EXECUTION TIME:
533.966
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:05:17) 
-- CODE:
ti=float(input("q: "))
pc=float(input("p: "))
qa=float(input("w: "))

time=0

while(0<ti<12000):
	acres=ti*(pc/100)
	ti+=acres
	ti-=qa
	time+=1
if(ti<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(time)
-- EXECUTION TIME:
0.204658
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
